# Aegisub

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  Aegisub.sln  CLAUDE.md  CREDITS.md  INSTALL  LICENCE  Makefile  Makefile.am  Makefile.inc.in  Makefile.target  README  README.md  acconf.h.in  acinclude.m4  aclocal.m4  autogen.sh  compile.sh  configure  configure.ac  configure.in  dummy.txt  header.mk  make-app-bundle.sh  meson.build  meson_options.txt  org.aegisub.Aegisub.yml  version.ps1
FFmpegSource2/: Makefile.am  MatroskaParser.c  MatroskaParser.h  coparser.h  ffaudiosource.cpp  ffaudiosource.h  ffavisynth.cpp  ffavisynth.h  ffavsfilters.cpp  ffmpegsource2.html  ffms.cpp  ffms.h  ffms2.html  ffmsindex.cpp  ffmsindex.h  ffswscale.cpp  ffswscale.h  ffvideosource.cpp  ffvideosource.h  guids.h  indexing.cpp  indexing.h  stdiostream.c  stdiostream.h  utils.cpp  utils.h  wave64writer.cpp  wave64writer.h
FexTrackerSource/: FexGenericFilter.cpp  FexGenericFilter_BaseFloatImage.cpp  FexGenericFilter_BaseFloatImageApply.h  FexGenericFilter_Contribution.h  FexGenericFilter_FexImage.cpp  FexGenericFilter_FexImageApply.h  FexGenericFilter_FilteringCore.h  FexGenericFilter_Include.h  FexGenericFilter_StaticFor.h  FexImgPyramid.cpp  FexImgPyramid.h  FexMovement.cpp  FexMovement.h  FexTracker.cpp  FexTracker.h  FexTrackerMovement.cpp  FexTrackingFeature.cpp  FexTrackingFeature.h  Makefile.am  StdAfx.cpp  StdAfx.h  tenlist.h
aegisub/: LICENCE  Makefile  Makefile.am  Makefile.inc.in  Makefile.target  MatroskaParser.c  VideoSink.cpp  VideoSink.h  acconf.h.in  acinclude.m4  aclocal.m4  aegisub_endian.h  aegisublocale.cpp  ass_dialogue.cpp  ass_dialogue.h  ass_entry.h  ass_export_filter.cpp  ass_export_filter.h  ass_exporter.cpp  ass_exporter.h  ass_file.cpp  ass_file.h  ass_karaoke.cpp  ass_override.cpp  ass_override.h  ass_style.cpp  ass_style.h  ass_style_storage.cpp  ass_style_storage.h  ass_time.cpp  ass_time.h  audio_box.cpp  audio_box.h  audio_display.cpp  audio_display.h  audio_karaoke.cpp  audio_karaoke.h  audio_player.cpp  audio_player.h  audio_player_alsa.cpp  (+325 more)
aegisub/FFmpegSource2/: Makefile.am  MatroskaParser.c  MatroskaParser.h  coparser.h  ffaudiosource.cpp  ffaudiosource.h  ffavisynth.cpp  ffavisynth.h  ffavsfilters.cpp  ffms.cpp  ffms.h  ffms2.html  ffms2.lib  ffms2rt.cpp  ffmsindex.cpp  ffpp.cpp  ffpp.h  ffswscale.cpp  ffvideosource.cpp  ffvideosource.h  guids.h  indexing.cpp  indexing.h  stdiostream.c  stdiostream.h  utils.cpp  utils.h  wave64writer.cpp  wave64writer.h
aegisub/auto3/: automation.cpp
aegisub/automation/: .gitignore  Makefile  Makefile.am
aegisub/bitmaps/: eyedropper.cur  genxpm.awk  genxpm.sh
aegisub/boost/: Makefile.am  assert.hpp  shared_ptr.hpp
aegisub/config/: config_unix.h  config_windows0.h
aegisub/csri/: csri.h  loader.h
aegisub/desktop/: Makefile  aegisub.desktop.in  aegisub.desktop.template.in
aegisub/gl/: Makefile.am
aegisub/lib/: ffms2.lib
aegisub/libaegisub/: Makefile  Makefile.am  config.h  lagi_pre.h
aegisub/libass/: Makefile  Makefile.am  ass_bitmap.c  ass_drawing.c  ass_font.c  ass_fontconfig.c  ass_render.c  ass_strtod.c  config.h  help_mp.h  libass_msvc.patch  wscript
aegisub/libffms/: Makefile  Makefile.am  MatroskaParser.h  ffaudiosource.cpp  ffaudiosource.h  ffavisynth.cpp  ffavisynth.h  ffms.cpp  ffms.h  ffms2.html  ffswscale.cpp  indexing.cpp  indexing.h  stdiostream.c  utils.cpp  wave64writer.h  wscript
aegisub/libmedia/: Makefile  magi_pre.h
aegisub/libosxutil/: Makefile.am  bundledirs-test.c  bundledirs.c  libosxutil.h
aegisub/libresrc/: Makefile.am  wxicon_xpm.xpm
auto3/: Makefile.am  README  auto3.c  auto3.h  auto3.sln  auto3.vcproj  callables.c
automation/: Makefile  Makefile.am  meson.build
core/: FexMovement.h  FexTracker.h  FexTrackingFeature.h  Makefile.am  MatroskaParser.c  MatroskaParser.h  about.cpp  about.h  aegisublocale.cpp  aegisublocale.h  aspell_wrap.cpp  aspell_wrap.h  ass_attachment.cpp  ass_attachment.h  ass_dialogue.cpp  ass_dialogue.h  ass_entry.cpp  ass_entry.h  ass_export_filter.cpp  ass_export_filter.h  ass_exporter.cpp  ass_exporter.h  ass_file.cpp  ass_file.h  ass_override.cpp  ass_style.cpp  ass_style.h  ass_style_storage.cpp  ass_time.cpp  ass_time.h  audio_box.cpp  audio_box.h  audio_display.cpp  audio_display.h  audio_karaoke.cpp  audio_karaoke.h  audio_player.cpp  audio_player.h  audio_player_dsound.cpp  audio_player_dsound.h  (+193 more)
csri/: LICENSE  Makefile.am  configure.ac  csri.pc.in  csri.vcproj  csri_2008.vcproj
desktop/: Makefile  Makefile.am
libaegisub/: Makefile  lagi_pre.h  meson.build
libass/: Makefile.am  Makefile.in  ass.c  ass_bitmap.c  ass_bitmap.h  ass_cache.c  ass_fontconfig.c  ass_render.c  ass_utils.c  ass_utils.h  libass.vcproj  mputils.c  mputils.h
po/: LINGUAS  Makefile  Makevars  POTFILES  POTFILES.in  aegisub.pot  ar.po  be.po  bg.po  ca.mo  ca.po  cs.mo  cs.po  da.po  de.po  el.po  es.mo  es.po  eu.po  fa.po  fi.mo  fi.po  fr.mo  fr.po  fr_FR.mo  fr_FR.po  gl.po  hu.mo  hu.po  id.po  it.po  ja.mo  ja.po  ko.mo  ko.po  lt.po  make_pot.bat  make_pot.sh  meson.build  mkwin32layout.py  (+23 more)
src/: .clang-format  Makefile  MatroskaParser.c  MatroskaParser.h  aegisublocale.cpp  aegisublocale.h  agi_pre.cpp  agi_pre.h  ass_attachment.cpp  ass_attachment.h  ass_dialogue.cpp  ass_dialogue.h  ass_entry.cpp  ass_entry.h  ass_export_filter.cpp  ass_export_filter.h  ass_exporter.cpp  ass_exporter.h  ass_file.cpp  ass_file.h  ass_info.h  ass_karaoke.cpp  ass_karaoke.h  ass_override.cpp  ass_override.h  ass_parser.cpp  ass_parser.h  ass_style.cpp  ass_style.h  ass_style_storage.cpp  ass_style_storage.h  ass_time.cpp  ass_time.h  async_video_provider.cpp  async_video_provider.h  audio_box.cpp  audio_box.h  audio_colorscheme.cpp  audio_colorscheme.h  audio_controller.cpp  (+329 more)
tests/: Makefile  meson.build  setup.bat  setup.sh  unset.bat
universalchardet/: Makefile.am  nsCharSetProber.cpp  nsMBCSGroupProber.h  nsSBCSGroupProber.h  nsUniversalDetector.cpp  nsUniversalDetector.h  prcpucfg.h  universalcharset.vcproj  universalcharset_2008.vcproj
(+2546 files in other folders)
